--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -35,4 +19,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.row__posters {
+  display: flex;
+}
+
+.row__poster {
+  object-fit: container;
+  width: 100%;
+  max-height: 100px;
+  margin-right: 10px;
+  transition: trasnform 450ms;
+}
+
+.row__poster:hover {
+  transform: scale(1.08);
 }
