--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
+* {
+  margin: 0;
+}
+
 .App {
-  text-align: center;
+  background-color: #111;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row {
+  margin-left: 20px;
+  color      : #f1f1f1;
 }
 
 .row__posters {
-  display: flex;
+  display   : flex;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  padding   : 20px;
+}
+
+.row__posters::-webkit-scrollbar {
+  display: none;
 }
 
 .row__poster {
-  object-fit: container;
-  width: 100%;
-  max-height: 100px;
+  object-fit  : contain;
+  width       : 100%;
+  max-height  : 100px;
   margin-right: 10px;
-  transition: trasnform 450ms;
+  transition  : trasnform 450ms;
 }
 
 .row__poster:hover {
   transform: scale(1.08);
+}
+
+.row__posterLarge {
+  max-height: 250px;
+}
+
+.row__posterLarge:hover {
+  transform: scale(1.09);
+}
+
+.banner {
+  color     : white;
+  object-fit: contain;
+  height    : 448px;
+}
+
+.banner__contents {
+  margin-left: 30px;
+  padding-top: 140px;
+  height     : 190px;
+}
+
+.banner__title {
+  font-size     : 3rem;
+  font-weight   : 800;
+  padding-bottom: 0.3rem;
+}
+
+.banner__description {
+  width      : 45rem;
+  line-height: 1.3;
+  padding-top: 1rem;
+  font-size  : 1rem;
+  max-width  : 360px;
+  height     : 80px;
+}
+
+.banner__button {
+  cursor          : pointer;
+  color           : #fff;
+  outline         : none;
+  border          : none;
+  font-weight     : 700;
+  border-radius   : 0.2vw;
+  padding-left    : 2rem;
+  padding-right   : 2rem;
+  padding-top     : 0.5rem;
+  padding-bottom  : 0.5rem;
+  margin-right    : 1rem;
+  background-color: rgba(51, 51, 51, 0.5);
+}
+
+.banner__button:hover {
+  color           : #000;
+  background-color: #e6e6e6;
+  transition      : all 0.2s;
+}
+
+.banner--fadeBottom {
+  height: 11rem;
+  background-image: linear-gradient(180deg,
+      transparent,
+      rgba(37, 37, 37, 0.61),
+      #111);
+}
+
+.nav {
+  position                  : fixed;
+  top                       : 0;
+  width                     : 100%;
+  padding                   : 20px;
+  height                    : 30px;
+  z-index                   : 1;
+  display                   : flex;
+  justify-content           : space-between;
+  transition-timing-function: ease-in;
+  transition                : all 0.5s;
+}
+
+.nav__black {
+  background-color: #111;
+
+}
+
+.nav__logo {
+  position  : fixed;
+  left      : 20;
+  width     : 80px;
+  object-fit: contain;
+}
+
+.nav__avatar {
+  position  : fixed;
+  right     : 20px;
+  width     : 30px;
+  object-fit: contain;
 }
