--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .row {
-  margin-left: 20px;
+  margin-left: 1.3em;
   color      : #f1f1f1;
 }
 
@@ -15,7 +15,7 @@
   display   : flex;
   overflow-y: hidden;
   overflow-x: scroll;
-  padding   : 20px;
+  padding   : 1.25em;
 }
 
 .row__posters::-webkit-scrollbar {
@@ -24,9 +24,9 @@
 
 .row__poster {
   object-fit  : contain;
-  width       : 100%;
-  max-height  : 100px;
-  margin-right: 10px;
+  max-width   : 16.25em;
+  max-height  : 12.5em;
+  margin-right: .8em;
   transition  : trasnform 450ms;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .row__posterLarge {
-  max-height: 250px;
+  max-height: 16em;
 }
 
 .row__posterLarge:hover {
@@ -45,13 +45,13 @@
 .banner {
   color     : white;
   object-fit: contain;
-  height    : 448px;
+  height    : 28em;
 }
 
 .banner__contents {
-  margin-left: 30px;
-  padding-top: 140px;
-  height     : 190px;
+  margin-left: 1.8em;
+  padding-top: 8.75em;
+  height     : 11.8em;;
 }
 
 .banner__title {
@@ -65,8 +65,8 @@
   line-height: 1.3;
   padding-top: 1rem;
   font-size  : 1rem;
-  max-width  : 360px;
-  height     : 80px;
+  max-width  : 22em;
+  height     : 5em;
 }
 
 .banner__button {
@@ -102,8 +102,8 @@
   position                  : fixed;
   top                       : 0;
   width                     : 100%;
-  padding                   : 20px;
-  height                    : 30px;
+  padding                   : 1.25em;
+  height                    : 1.8em;
   z-index                   : 1;
   display                   : flex;
   justify-content           : space-between;
@@ -119,13 +119,13 @@
 .nav__logo {
   position  : fixed;
   left      : 20;
-  width     : 80px;
+  width     : 5em;
   object-fit: contain;
 }
 
 .nav__avatar {
   position  : fixed;
-  right     : 20px;
-  width     : 30px;
+  right     : 1.25em;
+  width     : 1.8em;
   object-fit: contain;
 }
